# ehu

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Ehu.sln  README.md  imgui.ini  premake5.lua
.cursor/rules/: ehu-core-utils.mdc  ehu-cpp-engine.mdc  ehu-engine-overview.mdc  ehu-headers.mdc
Ehu/: CMakeLists.txt  Ehu.vcxproj  Ehu.vcxproj.filters
Ehu/src/: CmakeLists.txt  Ehu.h
Ehu/src/Ehu/: Application.cpp  Application.h  CmakeLists.txt  Core.h  EntryPoint.h  EventHandler.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h  ehupch.cpp  ehupch.h
Ehu/src/Ehu/Backends/: CMakeLists.txt
Ehu/src/Ehu/Backends/OpenGL_GLFW/: CMakeLists.txt  ImGuiBackendGLFWOpenGL.cpp  ImGuiBackendGLFWOpenGL.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Ehu/src/Ehu/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  FileSystem.cpp  FileSystem.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Ref.h  RuntimeStats.h  TimeStep.h  Timer.h  UUID.cpp  UUID.h
Ehu/src/Ehu/Debug/: Instrumentor.h
Ehu/src/Ehu/ECS/: CMakeLists.txt  ComponentReflection.cpp  ComponentReflection.h  Components.cpp  Components.h  Entity.h  LayerRegistry.cpp  LayerRegistry.h  TypeId.h  World.cpp  World.h
Ehu/src/Ehu/Editor/: CMakeLists.txt  CreationRegistry.cpp  CreationRegistry.h  EditorContext.cpp  EditorContext.h  EditorPanelData.cpp  EditorPanelData.h  ViewportRenderer.cpp  ViewportRenderer.h
Ehu/src/Ehu/Events/: ApplicationEvent.h  CmakeLists.txt  Event.h  EventHandler.h  KeyEvent.h  MouseEvent.h
Ehu/src/Ehu/ImGui/: ApplicationImGuiBootstrap.cpp  CMakeLists.txt  DashboardLayer.cpp  DashboardLayer.h  DashboardStats.h  DebugLayer.cpp  DebugLayer.h  ImGuiBackend.cpp  ImGuiBackend.h  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiWindowVisibility.cpp  ImGuiWindowVisibility.h
Ehu/src/Ehu/Physics/: CMakeLists.txt  Physics2D.h
Ehu/src/Ehu/Platform/: CmakeLists.txt  Framebuffer.cpp  Framebuffer.h  GraphicsBackend.cpp  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  MemoryStats.cpp  MemoryStats.h  Pipeline.cpp  Pipeline.h  RenderContext.cpp  RenderContext.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h
Ehu/src/Ehu/Platform/Backend/: GraphicsBackend.cpp  GraphicsBackend.h
Ehu/src/Ehu/Platform/IO/: FileDialog.cpp  FileDialog.h  Input.cpp  Input.h  Window.cpp
Ehu/src/Ehu/Platform/OpenGL/: CmakeLists.txt  ImGuiOpenGLRneder.cpp  ImGuiOpenGLRneder.h
Ehu/src/Ehu/Platform/Render/: Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  RenderContext.cpp  RenderContext.h  RendererAPI.cpp  RendererAPI.h  UniformBuffer.cpp  UniformBuffer.h
Ehu/src/Ehu/Platform/Render/Resources/: IndexBuffer.cpp  Shader.cpp  Shader.h  SubTexture2D.h  Texture2D.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
Ehu/src/Ehu/Platform/Window/: CmakeLists.txt  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Ehu/src/Ehu/Project/: AssetRegistry.cpp  AssetRegistry.h  CMakeLists.txt  Project.cpp  Project.h  ProjectConfig.cpp  ProjectConfig.h  ProjectSerializer.cpp  ProjectSerializer.h
Ehu/src/Ehu/Renderer/: CMakeLists.txt  Camera.h  Drawable.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererModule.h  SceneLayer.cpp  SceneLayer.h
Ehu/src/Ehu/Renderer/Camera/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Ehu/src/Ehu/Renderer/Material/: Material.cpp  Material.h
Ehu/src/Ehu/Renderer/Scene/: Scene.cpp  Scene.h
Ehu/src/Ehu/Renderer/Text/: Font.cpp  Font.h
Ehu/src/Ehu/Scene/: CMakeLists.txt  Scene.cpp  Scene.h  SceneCameraEntity.h  SceneEntity.h  SceneSerializer.cpp  SceneSerializer.h
Ehu/src/Ehu/Scripting/: CMakeLists.txt  IScriptRuntime.h  ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h  ScriptRegistry.cpp  ScriptRegistry.h
Ehu/src/Ehu/Utils/: PlatformUtils.h
EhuEditor/: CMakeLists.txt
EhuEditor/src/: CMakeLists.txt  ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorAuxPanels.cpp  EditorAuxPanels.h  EditorLayer.cpp  EditorLayer.h  EditorMenuBar.cpp  EditorMenuBar.h  EditorModalHost.cpp  EditorModalHost.h  EditorSession.cpp  EditorSession.h  EditorUIState.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  Main.cpp  ProjectEntryPanel.cpp  ProjectEntryPanel.h  SceneViewportPanel.cpp  SceneViewportPanel.h
SandBox/: CMakeLists.txt  SandBox.vcxproj  SandBox.vcxproj.filters
SandBox/src/: CmakeLists.txt  SandApp.cpp
Scripting/: README.md
Scripting/CSharp/Ehu.ScriptCore/: Ehu.ScriptCore.csproj  EntityApi.cs  Input.cs  InternalCalls.cs  Log.cs  Time.cs  Transform.cs
Scripting/CSharp/Game/: Game.csproj  PlaceholderScript.cs
build-scripts/: README.md  build_ninja.ps1  build_script_core.ps1  gen_compile_commands.ps1
docs/: ARCHITECTURE.md  README.md  RENDERER_ARCHITECTURE.md  TODO.md
docs/devlog/: 001-项目当前进度.md  002-Render-API与脚本修复.md  002-日志.md  003-日志.md
docs/example-docs/: README.md
docs/example-docs/Hazel/: README.md
docs/example-docs/Hazel-ScriptCore/: README.md
docs/example-docs/Hazelnut/: README.md
docs/example-docs/Sandbox/: README.md
docs/example-docs/scripts/: README.md
docs/technical/: 04-ECS.md  05-ScriptingModule.md  06-ImGuiModule.md  11-ECS-Scripting-RefactorBaseline.md
scripts/: README.md  build_ninja.ps1  gen_compile_commands.ps1
(+23 files in other folders)
